# repo-analyzer

./: .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
src/repo_inspector/: __init__.py  analyzer.py  app.py  cli.py  cloner.py  fetcher.py  models.py
src/repo_inspector/analysis/: __init__.py  bus_mitigation.py  changelog.py  code.py  dependencies.py  functional.py  knowledge_map.py  people.py  review_culture.py  stale_branches.py  time_machine.py  what_if.py
src/repo_inspector/screens/: __init__.py  home.py  issue.py  loading.py  results.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_bus_mitigation.py  test_changelog.py  test_cli.py  test_cli_extended.py  test_cloner.py  test_code.py  test_dependencies.py  test_fetcher.py  test_fetcher_extended.py  test_functional.py  test_generator.py  test_knowledge_map.py  test_models.py  test_models_extended.py  test_review_culture.py  test_stale_branches.py  test_time_machine.py  test_what_if.py
